(This file, CHANGES, lists fixes. See NEWS for new features and enhancements.)

Unreleased

  * Fixed possible crash when closing documents from within the SelectDoc
    requester.

  * Fixed adjusted position of mark, bookmark on same line as and to the right
    of multi-line pastes.

3.2.1 2019-10-02

  * Fixed reordering items on multi-page requesters.

3.2.0 2019-09-30

  * Fixed typo for "Home" key in default.keys.

  * Add backtick support for MarkDown syntax (md.jsf)

  * Fixed potentially infinite backwards search-and-replace.

3.1.2 2018-10-06

  * Fixed visual glitch when characters spanning multiple columns are only
    partially displayed on the left side.

  * Fixed PARAGRAPH command.

  * DeleteNextWord now deletes through the end of the next N words.

  * Undoing DeleteNextWord/DeletePrevWord also restores cursor position.

3.1.1 2017-06-04

  * Fixed visual glitch when deleting characters from long lines.

  * Fixed broken behavior in WordWrap with leading whitespace.

  * On CloseDoc (^Q), the next document now becomes active. It used to make
    the previous document active.

3.1.0 2017-04-29

  * Comments in .yaml files are highlighted more correctly.

  * Determine better whether Find and FindRegExp patterns need to be recompiled
    when switching buffers. Fix possible lockup after cancelled Find.

  * Fixed missing screen update after ABOUT (regression introduced in 3.0.1).
    Thanks to Brian Callahan for reporting this bug.

  * Help command uses its optional parameter again.

  * PasteVert behaves beyond the right end of lines again.

  * AutoComplete keeps words containing apostrophes as single words ("can't"
    instead of "can" and "t").

  * Home, End, Tab keys now work in menus.

  * Backward FindRegExp works again.

  * Resizing the window in inputs, requesters is more sane.

  * Restored correct keyboard input for 8-bit character sets.

  * Update syntax code for feature parity with current Joe.

3.0.1 2015-06-22
